Maybe fix spacing

--- a/theme.css
+++ b/theme.css
@@ -5008,17 +5008,11 @@ a.badge:focus {
 }
 .container .jumbotron,
 .container-fluid .jumbotron {
-  overflow: hidden;
-  float: left;
-  float: right;
-  padding-bottom: 99999px;
-  margin-bottom: -99999px;
   border-radius: 6px;
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 15px;
   padding: 20px;
-  height: 100%;
 }
 .jumbotron .container {
   max-width: 100%;
